--- a/scss/style.scss
+++ b/scss/style.scss
@@ -3,12 +3,17 @@ body {
    background: #e2e7ec;
 }
 .content {
-   width: 1140px;
+   max-width: 1140px;
    margin: 0 auto;
    display: grid;
    grid-template-columns: repeat(auto-fit, 360px);
+   grid-gap: 20px;
 }
 .item {
    height: 540px;
    background: #ffffff;
+}
+.item-big {
+   grid-column: 1/-2;
+   background-image: url(/img/CAR1.png);
 }
