--- a/css/style.css
+++ b/css/style.css
@@ -107,9 +107,36 @@ body {
 
 .item-big {
   grid-column: 1/-2;
+  padding: 48px 48px 25px 38px;
+  display: -ms-grid;
+  display: grid;
+  -ms-flex-line-pack: end;
+      align-content: end;
   background-image: url(/img/CAR1.png);
 }
 
+.item-date {
+  height: 15px;
+  color: #818181;
+  padding: 0 0 35px 0;
+}
+
 .item-text {
-  padding: 24px;
+  padding: 24px 24px 24px 24px;
+  color: #000000;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 28px;
+  font-weight: 600;
+}
+
+.item-car-color {
+  color: #ffffff;
+  font-size: 19px;
+}
+
+.item-date-car {
+  font-size: 19px;
+  color: #d6d6d6;
+  font-weight: 700;
 }
